# backend

./: .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
account/: models.py  schemas.py  serializers.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_user_group.py  0003_user_groups_user_is_superuser_user_user_permissions_and_more.py  0004_user_user_name.py  0005_alter_user_user_name.py  0006_user_count.py
backend/: settings.py  urls.py
config/: nginx.conf
file/: models.py  serializers.py  urls.py  views.py
file/migrations/: 0001_initial.py
group/: models.py  serializers.py  urls.py  views.py
group/migrations/: 0001_initial.py  0002_rename_group_name_group_name.py  0003_alter_group_name.py
products/: models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py
